update: .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ index2(With footer)_to_correct.html
 karl-pawlowicz-gbRaa67fEPo-unsplash.jpg
 luis-rocha-3UyoEEZBUhQ-unsplash.jpg
 Photos.txt
+CONTRIBUTING.md
